# goit-pythonweb-hw-12

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 5db151399999_init.py  96dee378d721_add_user_roles.py  dc74e195309b_add_to_model_user_filed_confirmed.py
src/: schemas.py
src/api/: auth.py  contact.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py  redis.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contact.py  email.py  users.py
src/services/templates/: password_reset.html  password_reset_set_email.html  verify_reset_password_email.html
tests/: _import_pytest.py  conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_users_repository_unit.py
